--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@polkadot/util": "^13.5.6",
+    "@polkadot/util-crypto": "^13.5.6",
     "commander": "^11.1.0",
     "ethers": "^6.15.0"
   },
