fix: Update .gitignore to generalize private key exclusion pattern

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,6 @@ coverage/
 # SpecStory explanation file
 .specstory/*
 
-private-key.txt
+*private-key*
 # SpecStory explanation file
 .specstory/.what-is-this.md
