--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@polkadot/util": "^13.5.6",
     "@polkadot/util-crypto": "^13.5.6",
+    "cli-table3": "^0.6.5",
     "commander": "^11.1.0",
     "ethers": "^6.15.0"
   },
