--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "@polkadot/util": "^13.5.6",
     "@polkadot/util-crypto": "^13.5.6",
+    "@types/inquirer": "^9.0.9",
     "cli-table3": "^0.6.5",
     "commander": "^11.1.0",
-    "ethers": "^6.15.0"
+    "ethers": "^6.15.0",
+    "inquirer": "^12.9.6"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
