feat: Implement wallet encryption and decryption features, enhancing security for private keys. Add unlock command for displaying decrypted keys, and improve user prompts for wallet management. Update tests for encryption functionality and password validation.

--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "clean": "rm -rf dist",
-    "build:exe": "npm run build && pkg dist/index.js --targets node18-macos-x64,node18-win-x64 --output dist/walpha",
-    "build:mac": "npm run build && pkg dist/index.js --targets node18-macos-x64 --output dist/walpha-mac",
-    "build:win": "npm run build && pkg dist/index.js --targets node18-win-x64 --output dist/walpha-win.exe"
+    "cli": "bun src/index.ts",
+    "test": "bun test"
   },
   "keywords": [
     "cli",
